--- a/notebooks/01_ingestao_bronze.ipynb
+++ b/notebooks/01_ingestao_bronze.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "45f3dc1e-a8e2-4ab9-9c4d-2baccd2ad365",
      "showTitle": false,
@@ -13,14 +16,17 @@
     }
    },
    "source": [
-    "# Ingestão Bronze"
+    "# Ingestão (Bronze)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8cf45c42-e76a-48cd-8544-616762de6e32",
      "showTitle": false,
