--- a/notebooks/sem_output/02_transformacao_silver.ipynb
+++ b/notebooks/sem_output/02_transformacao_silver.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3ee17e37-30c5-48e0-b584-eb0f40553d94",
      "showTitle": false,
@@ -20,7 +23,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "30889184-f788-4ec8-8c68-8bdf22dc2f94",
      "showTitle": false,
@@ -62,7 +68,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "be8d612c-55a1-4ba1-842b-0613c211cf5a",
      "showTitle": false,
@@ -175,7 +184,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "71aa25ad-d91d-407d-b0a9-319997f0a3f2",
      "showTitle": false,
@@ -294,7 +306,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8de7173d-4dc1-4829-853b-cae10e15bfca",
      "showTitle": false,
