--- a/notebooks/sem_output/03_modelagem_gold.ipynb
+++ b/notebooks/sem_output/03_modelagem_gold.ipynb
@@ -144,7 +144,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a26b691a-472f-4e01-9deb-763a338a456b",
      "showTitle": false,
