--- a/notebooks/com_output/04_solucao_problema.ipynb
+++ b/notebooks/com_output/04_solucao_problema.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "f1148976-f30d-4aec-9b79-a35a3a2d2bd6",
      "showTitle": false,
@@ -16,17 +13,14 @@
     }
    },
    "source": [
-    "# Análise de Dados"
+    "# Solução do Problema"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b80d56c1-e723-4932-a24f-cadad3218d9d",
      "showTitle": false,
@@ -106,10 +100,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "bbf1201c-98cd-491a-98bd-27c342a0010c",
      "showTitle": false,
@@ -131,10 +122,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "75c4b3ee-e699-48d1-8035-6ad40ba37e9e",
      "showTitle": false,
@@ -150,10 +138,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0b908c5f-15b8-4b13-a86a-a11dc1a2adf6",
      "showTitle": false,
@@ -249,10 +234,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "d43642f4-7287-44a2-b98d-b2bff08174f8",
      "showTitle": false,
@@ -272,10 +254,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "060b1fbf-6124-4eef-b62a-b048385a02f2",
      "showTitle": false,
@@ -291,10 +270,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2600e946-0007-4179-b057-8242854465d0",
      "showTitle": false,
@@ -381,10 +357,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c6ef7f9b-3ff1-4611-b7e8-b513e180f711",
      "showTitle": false,
@@ -406,10 +379,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "133e1a43-5792-4b5b-92e5-445207afcc8c",
      "showTitle": false,
@@ -425,10 +395,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "d1d0cde5-97ab-4cd2-a3cc-c7d7a169a890",
      "showTitle": false,
@@ -505,10 +472,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "178df410-53f3-4bc8-add9-a0359d14c00a",
      "showTitle": false,
@@ -526,10 +490,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b01fddaa-5b7b-494b-906e-f718d4454b51",
      "showTitle": false,
@@ -545,10 +506,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "bfeea4d3-ef95-4131-b3c3-48bda06e41de",
      "showTitle": false,
@@ -571,10 +529,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8d75fcf2-35ee-4aa1-95d8-3bc201b28c67",
      "showTitle": false,
@@ -604,7 +559,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "04_analise_dados",
+   "notebookName": "04_solucao_problema",
    "widgets": {}
   },
   "language_info": {
